refactor: scrollable section holds scrollable controls